<resources>
    <string name="app_name">StockLocator</string>
    <string name="panel_de_acceso">Panel de acceso</string>
    <string name="inicia">Inicia sesión</string>
    <string name="tipo">Tipo</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="personal">Personal</string>
    <string name="listado_de_personal">listado de personal</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="crear_cuenta_de_acceso">Crear cuenta de acceso</string>
    <string name="rol">Rol</string>
    <string name="nombre">Nombre</string>
    <string name="correo_crear">Correo</string>
    <string name="contrase_a_crear">Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="carga_de_catalogos_y_productos">Carga de Catalogos y Productos</string>
    <string name="revisa_continuamente_los_pedidos_proporcionados">Revisa continuamente los pedidos proporcionados</string>
    <string name="pedido">Pedido</string>
    <string name="cat_logo">Catálogo</string>
    <string name="scanner_atajo">Scanner (atajo)</string>
    <string name="carga_de_articulo">Carga de Articulo</string>
    <string name="favor_de_seleccionar_correctamente_el_articulo">Favor de seleccionar correctamente el articulo</string>
    <string name="scanner">Scanner</string>
    <string name="guardar">Guardar</string>
    <string name="borrar">Borrar</string>
    <string name="btnscanner">Scanner</string>
    <string name="administrador_usuario">Administradortuempresa.es</string>
    <string name="Menu">TODO</string>
</resources>